<resources>
    <string name="app_name">ФКУ - Расчёт диеты</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="product_title">Название продукта:</string>
    <string name="feedback">Обратная связь</string>
    <string name="delete_question">Вы уверены, что хотите удалить этот элемент?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="action_settings">Settings</string>
    <string name="date">Дата</string>
    <string name="fa_level">Уровень ФА</string>
    <string name="notice">Примечания</string>
    <string name="save">Сохранить</string>
    <string name="total">Итого</string>
    <string name="proteins">Бл</string>
    <string name="fats">Жр</string>
    <string name="carbohydrates">Уг</string>
    <string name="kilos">Кг</string>
    <string name="gram">Гр</string>
    <string name="grams">Граммы</string>
    <string name="product">Продукт</string>
    <string name="add">Сохранить</string>
    <string name="calculate">Расчитать</string>
    <string name="kl">Кл</string>
    <string name="proteins_level">Уровень Бл</string>
    <string name="fa">ФА</string>
    <string name="main">Главная</string>
    <string name="analysis">Анализы</string>
    <string name="update">Синхронизация</string>
    <string name="insert">Добавить продукт</string>
    <string name="payment">Оплата</string>
    <string name="wait">Подождите</string>
    <string name="payment_successful">Оплата успешна</string>
    <string name="menu">Меню</string>
    <string name="site">Наш сайт :</string>
    <string name="domein">https://www.fkusoft.ru</string>
    <string name="maintext">Для добавления Ваших\nпродуктов в базу\nпрограммы пришлите свои\nпродукты на почту</string>
    <string name="baza">baza@fkusoft.ru</string>
    <string name="mail">По всем вопросам можно\nобращаться на email:</string>
    <string name="info">info@fkusoft.ru</string>
    <string name="account">410014198805466</string>
    <string name="client_id">F4C33E5FDE2D3BB4892D4FEBCAA10A8ED53525BAF383F4A2F76BBE8587CED803</string>
    <string name="host">https://money.yandex.ru</string>
    <string name="choose_product">Выберете нужный продукт</string>
    <string name="complicated_product">составной</string>
    <string name="no_complicated_product">не составной</string>
    <string name="enter_a_name">Введите имя продукта!</string>
    <string name="edit_gr_edit">Введите граммы:</string>
    <string name="change_url">Изменить домен</string>
    <string name="cancel">Отменить</string>
    <string name="OK">Принять</string>
    <string name="empty_url">Вы ввели пустой домен!</string>
    <string name="url_change_hint">Пишите url в подходящем формате</string>
    <string name="permissions_needed">Для работы приложения необходимы разрешения!</string>
</resources>
