<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editDate"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="date"/>
        <TextView
            android:text="@string/fa_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/editFAlevel"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal"/>
        <TextView
            android:text="@string/notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editNotice"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="text"/>
        <Button
            android:id="@+id/buttonSave"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>