<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:title=" "
        app:navigationIcon="@drawable/ic_back"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
        <EditText
            android:id="@+id/editSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
        <ImageView
            android:id="@+id/search_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_search_category_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/product_title"/>
        <EditText
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

    </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/product"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>

        <TextView
            android:text="@string/proteins"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:text="@string/fats"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:text="@string/carbohydrates"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:text="@string/fa"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:text="@string/kl"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gram"
            android:textColor="@android:color/black"
            android:textSize="17sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/product_rec_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"/>

        <EditText
            android:id="@+id/editTotalGram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:inputType="numberDecimal"
            android:padding="2dp"
            android:background="@drawable/edit_frame"
            android:hint="@string/grams"
            android:textSize="25sp"
            android:textColorHint="@color/colorGreen"
            android:gravity="center"
            android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textFA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_level"
                android:textColor="@android:color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textBel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/proteins_level"
                android:textColor="@android:color/black"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="calculate"
                android:text="@string/calculate"
                android:textAllCaps="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="addItem"
                android:text="@string/add"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>