<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:title=" "
        app:navigationIcon="@drawable/ic_back"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
        <EditText
            android:id="@+id/editSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_search_category_default"
            android:onClick="searchProduct"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/product"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>

        <TextView
            android:text="@string/proteins"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:text="@string/fats"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:text="@string/carbohydrates"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:text="@string/fa"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:text="@string/kl"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:text="@string/gram"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewProduct"
            android:layout_weight="0.7"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:id="@+id/textViewProteins"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:id="@+id/textViewFats"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:id="@+id/textViewCarbohydrates"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:id="@+id/textViewFA"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:id="@+id/textViewKl"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"/>
        <TextView
            android:id="@+id/textViewGr"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editGram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:inputType="numberDecimal"
            android:padding="2dp"
            android:background="@drawable/edit_frame"
            android:hint="@string/grams"
            android:textSize="25sp"
            android:textColorHint="@color/colorGreen"
            android:gravity="center"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textFA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:text="@string/fa_level"/>
            <TextView
                android:id="@+id/textBel"
                android:layout_marginLeft="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:text="@string/proteins_level"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="calculate"
                android:textAllCaps="false"
                android:text="@string/calculate"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="addItem"
                android:textAllCaps="false"
                android:text="@string/add"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>